adding rail incidents and moving towards tasks instead of events

--- a/DcMetroLib/DcMetroLib/DcMetroLib.csproj
+++ b/DcMetroLib/DcMetroLib/DcMetroLib.csproj
@@ -41,6 +41,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Common\LinqExtensions.cs" />
+    <Compile Include="Data\IncidentData.cs" />
     <Compile Include="Data\LineCodeType.cs" />
     <Compile Include="Data\MetroPathItem.cs" />
     <Compile Include="Interfaces\IMetroData.cs" />
