--- a/DcMetroLib/DcMetroLib/DcMetroLib.csproj
+++ b/DcMetroLib/DcMetroLib/DcMetroLib.csproj
@@ -40,7 +40,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Common\CollectionUtil.cs" />
     <Compile Include="Common\LinqExtensions.cs" />
+    <Compile Include="Common\StringUtil.cs" />
     <Compile Include="Data\ElevatorIncidentData.cs" />
     <Compile Include="Data\RailIncidentData.cs" />
     <Compile Include="Data\LineCodeType.cs" />
