--- a/DcMetroLib/DcMetroLib/DcMetroLib.csproj
+++ b/DcMetroLib/DcMetroLib/DcMetroLib.csproj
@@ -46,7 +46,10 @@
     <Compile Include="Common\StringUtil.cs" />
     <Compile Include="Data\BusRoute.cs" />
     <Compile Include="Data\BusStops.cs" />
+    <Compile Include="Data\BusStopTimes.cs" />
+    <Compile Include="Data\Containers\BusScheduleByRouteContainer.cs" />
     <Compile Include="Data\Containers\BusStopsContainer.cs" />
+    <Compile Include="Data\BusTrip.cs" />
     <Compile Include="Data\Containers\ElevatorIncidentsContainer.cs" />
     <Compile Include="Data\Containers\RailIncidentsContainer.cs" />
     <Compile Include="Data\Containers\LinesContainer.cs" />
